@@ -76,94 +76,101 @@ Alcoext_Init(
         return TCL_ERROR;
     }
 
-    Tcl_MutexLock(&initMutex);
-
+    //
+    // Check if the library is already initialised before locking
+    // the global initialisation mutex (improves loading time).
+    //
     if (!initialised) {
+        Tcl_MutexLock(&initMutex);
+
+        // Check initialisation status again now that we're in the mutex.
+        if (!initialised) {
 #ifdef _WINDOWS
-        // Initialise the OS version structure.
-        osVersion.dwOSVersionInfoSize = sizeof(OSVERSIONINFOA);
-        GetVersionExA(&osVersion);
+            // Initialise the OS version structure.
+            osVersion.dwOSVersionInfoSize = sizeof(OSVERSIONINFOA);
+            GetVersionExA(&osVersion);
 
-        ZeroMemory(&winProcs, sizeof(WinProcs));
-        kernelModule = LoadLibraryA("kernel32.dll");
+            ZeroMemory(&winProcs, sizeof(WinProcs));
+            kernelModule = LoadLibraryA("kernel32.dll");
 
-        if (kernelModule == NULL) {
-            Tcl_AppendResult(interp, "unable to load kernel32.dll: ",
-                TclSetWinError(interp, GetLastError()), NULL);
+            if (kernelModule == NULL) {
+                Tcl_AppendResult(interp, "unable to load kernel32.dll: ",
+                    TclSetWinError(interp, GetLastError()), NULL);
 
-            Tcl_MutexUnlock(&initMutex);
-            return TCL_ERROR;
-        }
+                Tcl_MutexUnlock(&initMutex);
+                return TCL_ERROR;
+            }
 
-        //
-        // These functions must be resolved on run-time for backwards
-        // compatibility on older Windows systems (earlier than NT v5).
-        //
-        winProcs.getDiskFreeSpaceEx = (GetDiskFreeSpaceExProc)
-            GetProcAddress(kernelModule, "GetDiskFreeSpaceExA");
+            //
+            // These functions must be resolved on run-time for backwards
+            // compatibility on older Windows systems (earlier than NT v5).
+            //
+            winProcs.getDiskFreeSpaceEx = (GetDiskFreeSpaceExProc)
+                GetProcAddress(kernelModule, "GetDiskFreeSpaceExA");
 
-        winProcs.findFirstVolumeMountPoint = (FindFirstVolumeMountPointProc)
-            GetProcAddress(kernelModule, "FindFirstVolumeMountPointA");
-        winProcs.findNextVolumeMountPoint = (FindNextVolumeMountPointProc)
-            GetProcAddress(kernelModule, "FindNextVolumeMountPointA");
-        winProcs.findVolumeMountPointClose = (FindVolumeMountPointCloseProc)
-            GetProcAddress(kernelModule, "FindVolumeMountPointClose");
+            winProcs.findFirstVolumeMountPoint = (FindFirstVolumeMountPointProc)
+                GetProcAddress(kernelModule, "FindFirstVolumeMountPointA");
+            winProcs.findNextVolumeMountPoint = (FindNextVolumeMountPointProc)
+                GetProcAddress(kernelModule, "FindNextVolumeMountPointA");
+            winProcs.findVolumeMountPointClose = (FindVolumeMountPointCloseProc)
+                GetProcAddress(kernelModule, "FindVolumeMountPointClose");
 
-        winProcs.getVolumeNameForVolumeMountPoint = (GetVolumeNameForVolumeMountPointProc)
-            GetProcAddress(kernelModule, "GetVolumeNameForVolumeMountPointA");
+            winProcs.getVolumeNameForVolumeMountPoint = (GetVolumeNameForVolumeMountPointProc)
+                GetProcAddress(kernelModule, "GetVolumeNameForVolumeMountPointA");
 
-        //
-        // If GetVolumeInformation() is called on a floppy drive or a CD-ROM
-        // drive that does not have a disk inserted, the system will display a
-        // message box asking the user to insert one.
-        //
-        SetErrorMode(SetErrorMode(0) | SEM_FAILCRITICALERRORS);
+            //
+            // If GetVolumeInformation() is called on a floppy drive or a CD-ROM
+            // drive that does not have a disk inserted, the system will display
+            // a message box asking the user to insert one.
+            //
+            SetErrorMode(SetErrorMode(0) | SEM_FAILCRITICALERRORS);
 #endif // _WINDOWS
 
-        // An exit handler must only be registered once.
-        Tcl_CreateExitHandler(ExitHandler, NULL);
+            // An exit handler must only be registered once.
+            Tcl_CreateExitHandler(ExitHandler, NULL);
 
-        // Register ciphers, hashes, and PRNGs for LibTomCrypt.
-        register_cipher(&des3_desc);
-        register_cipher(&aes_desc);
-        register_cipher(&anubis_desc);
-        register_cipher(&blowfish_desc);
-        register_cipher(&cast5_desc);
-        register_cipher(&des_desc);
-        register_cipher(&khazad_desc);
-        register_cipher(&noekeon_desc);
-        register_cipher(&rc2_desc);
-        register_cipher(&rc5_desc);
-        register_cipher(&rc6_desc);
-        register_cipher(&saferp_desc);
-        register_cipher(&safer_k128_desc);
-        register_cipher(&safer_k64_desc);
-        register_cipher(&safer_sk128_desc);
-        register_cipher(&safer_sk64_desc);
-        register_cipher(&skipjack_desc);
-        register_cipher(&twofish_desc);
-        register_cipher(&xtea_desc);
-        register_hash(&md2_desc);
-        register_hash(&md4_desc);
-        register_hash(&md5_desc);
-        register_hash(&rmd128_desc);
-        register_hash(&rmd160_desc);
-        register_hash(&sha1_desc);
-        register_hash(&sha224_desc);
-        register_hash(&sha256_desc);
-        register_hash(&sha384_desc);
-        register_hash(&sha512_desc);
-        register_hash(&tiger_desc);
-        register_hash(&whirlpool_desc);
-        register_prng(&fortuna_desc);
-        register_prng(&rc4_desc);
-        register_prng(&sober128_desc);
-        register_prng(&sprng_desc);
-        register_prng(&yarrow_desc);
+            // Register ciphers, hashes, and PRNGs for LibTomCrypt.
+            register_cipher(&des3_desc);
+            register_cipher(&aes_desc);
+            register_cipher(&anubis_desc);
+            register_cipher(&blowfish_desc);
+            register_cipher(&cast5_desc);
+            register_cipher(&des_desc);
+            register_cipher(&khazad_desc);
+            register_cipher(&noekeon_desc);
+            register_cipher(&rc2_desc);
+            register_cipher(&rc5_desc);
+            register_cipher(&rc6_desc);
+            register_cipher(&saferp_desc);
+            register_cipher(&safer_k128_desc);
+            register_cipher(&safer_k64_desc);
+            register_cipher(&safer_sk128_desc);
+            register_cipher(&safer_sk64_desc);
+            register_cipher(&skipjack_desc);
+            register_cipher(&twofish_desc);
+            register_cipher(&xtea_desc);
+            register_hash(&md2_desc);
+            register_hash(&md4_desc);
+            register_hash(&md5_desc);
+            register_hash(&rmd128_desc);
+            register_hash(&rmd160_desc);
+            register_hash(&sha1_desc);
+            register_hash(&sha224_desc);
+            register_hash(&sha256_desc);
+            register_hash(&sha384_desc);
+            register_hash(&sha512_desc);
+            register_hash(&tiger_desc);
+            register_hash(&whirlpool_desc);
+            register_prng(&fortuna_desc);
+            register_prng(&rc4_desc);
+            register_prng(&sober128_desc);
+            register_prng(&sprng_desc);
+            register_prng(&yarrow_desc);
 
-        initialised = 1;
+            initialised = 1;
+        }
+        Tcl_MutexUnlock(&initMutex);
     }
-    Tcl_MutexUnlock(&initMutex);
 
     // Allocate state structures.
     stateListPtr = (StateList *)ckalloc(sizeof(StateList));
